@@ -2,6 +2,9 @@ Revision history for Perl module {{$dist->name}}
 
 {{$NEXT}}
 
+	Add 'casesens' option to control case-sensitive searching
+	Tweak some sqlite pragma for performance
+
 0.001
 	Released: 2011-04-02 18:56:02 UTC
 
